.cabal-sandbox/logs/unix-time-0.3.8.log
cabal: Entering directory '/tmp/cabal-tmp-15194/unix-time-0.3.8'
Configuring unix-time-0.3.8...
checking for gcc... /usr/bin/gcc
checking whether the C compiler works... yes
checking for C compiler default output file name... a.out
checking for suffix of executables... 
checking whether we are cross compiling... no
checking for suffix of object files... o
checking whether we are using the GNU C compiler... yes
checking whether /usr/bin/gcc accepts -g... yes
checking for /usr/bin/gcc option to accept ISO C89... none needed
checking how to run the C preprocessor... /usr/bin/gcc -E
checking for grep that handles long lines and -e... /bin/grep
checking for egrep... /bin/grep -E
checking for ANSI C header files... yes
checking for sys/types.h... yes
checking for sys/stat.h... yes
checking for stdlib.h... yes
checking for string.h... yes
checking for memory.h... yes
checking for strings.h... yes
checking for inttypes.h... yes
checking for stdint.h... yes
checking for unistd.h... yes
checking xlocale.h usability... no
checking xlocale.h presence... no
checking for xlocale.h... no
checking for strptime_l... yes
checking for timegm... yes
configure: creating ./config.status
config.status: creating cbits/config.h
Building unix-time-0.3.8...
Preprocessing library unix-time-0.3.8...
[1 of 5] Compiling Data.UnixTime.Types ( dist/dist-sandbox-5ccdfda5/build/Data/UnixTime/Types.hs, dist/dist-sandbox-5ccdfda5/build/Data/UnixTime/Types.o )
[2 of 5] Compiling Data.UnixTime.Sys ( dist/dist-sandbox-5ccdfda5/build/Data/UnixTime/Sys.hs, dist/dist-sandbox-5ccdfda5/build/Data/UnixTime/Sys.o )
[3 of 5] Compiling Data.UnixTime.Diff ( Data/UnixTime/Diff.hs, dist/dist-sandbox-5ccdfda5/build/Data/UnixTime/Diff.o )
[4 of 5] Compiling Data.UnixTime.Conv ( Data/UnixTime/Conv.hs, dist/dist-sandbox-5ccdfda5/build/Data/UnixTime/Conv.o )

Data/UnixTime/Conv.hs:11:1: warning: [-Wunused-imports]
    The import of ‘Control.Applicative’ is redundant
      except perhaps to import instances from ‘Control.Applicative’
    To import instances alone, use: import Control.Applicative()
[5 of 5] Compiling Data.UnixTime    ( Data/UnixTime.hs, dist/dist-sandbox-5ccdfda5/build/Data/UnixTime.o )

In file included from /usr/include/x86_64-linux-gnu/bits/libc-header-start.h:33:0: error:
    0,
                     from /usr/include/string.h:26,
                     from cbits/conv.c:15:

/usr/include/features.h:184:3: error:
     warning: #warning "_BSD_SOURCE and _SVID_SOURCE are deprecated, use _DEFAULT_SOURCE" [-Wcpp]
     # warning "_BSD_SOURCE and _SVID_SOURCE are deprecated, use _DEFAULT_SOURCE"
       ^~~~~~~

In file included from /usr/include/x86_64-linux-gnu/bits/libc-header-start.h:33:0: error:
    0,
                     from /usr/include/string.h:26,
                     from cbits/conv.c:15:

/usr/include/features.h:184:3: error:
     warning: #warning "_BSD_SOURCE and _SVID_SOURCE are deprecated, use _DEFAULT_SOURCE" [-Wcpp]
     # warning "_BSD_SOURCE and _SVID_SOURCE are deprecated, use _DEFAULT_SOURCE"
       ^~~~~~~
Creating package registration file:
/tmp/pkgConf-unix-time-0.3141550536378012497.8
Installing library in
/home/borisqa/Documents/Study/2019-Retakes/MusicComposer/.cabal-sandbox/lib/x86_64-linux-ghc-8.0.2/unix-time-0.3.8-fUenbDAu5iFgvOMz5AJnj
Registering unix-time-0.3.8...
cabal: Leaving directory '/tmp/cabal-tmp-15194/unix-time-0.3.8'
